Improvement: Adds messages attribute to store generated messages for page paths and updates documentation/message text